force-app/main/default/objects/cgcloud__Account_Plan__c/cgcloud__Account_Plan__c.object-meta.xml
<CustomObject>
    <description>Container for Account Data for one Planning Account, one Business Year and one or multiple Categories.</description>
    <label>Customer Business Plan</label>
    <nameField>
        <displayFormat>AP-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Business Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>