force-app/main/default/objects/cgcloud__Account_Plan__c/fields/cgcloud__Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Anchor Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Business Plans</relationshipLabel>
    <relationshipName>Customer_Business_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>