force-app/main/default/objects/cgcloud__Account_Plan__c/fields/cgcloud__Active_Plan_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Active_Plan_Description__c</fullName>
    <formula>CASE($User.cgcloud__Language_Postfix__c,
&quot;Language1&quot;, cgcloud__Active_Plan_Description_Language_1__c,
&quot;Language2&quot;, BLANKVALUE(cgcloud__Active_Plan_Description_Language_2__c,cgcloud__Active_Plan_Description_Language_1__c),
&quot;Language3&quot;, BLANKVALUE(cgcloud__Active_Plan_Description_Language_3__c,cgcloud__Active_Plan_Description_Language_1__c),
&quot;Language4&quot;, BLANKVALUE(cgcloud__Active_Plan_Description_Language_4__c,cgcloud__Active_Plan_Description_Language_1__c),
cgcloud__Active_Plan_Description_Language_1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Plan Description</label>
    <type>Text</type>
</CustomField>