force-app/main/default/objects/cgcloud__Account_Plan__c/fields/cgcloud__Active_Plan_Description_Language_1__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Active_Plan_Description_Language_1__c</fullName>
    <label>Active Plan Description Language 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>