force-app/main/default/objects/cgcloud__Account_Plan__c/fields/cgcloud__Available_Product_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Available_Product_Level__c</fullName>
    <description>Specifies the multiple set of values user can choose which will be further used for aggregation on the calculation grid for account plan.</description>
    <label>Available Product Aggregation Levels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__Product_Level</valueSetName>
    </valueSet>
</CustomField>