force-app/main/default/objects/cgcloud__Account_Plan__c/fields/cgcloud__Business_Year__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Business_Year__c</fullName>
    <externalId>true</externalId>
    <label>Business Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>