force-app/main/default/objects/cgcloud__Account_Plan__c/fields/cgcloud__Category_Labels__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Category_Labels__c</fullName>
    <description>Category labels of all categories associated to plan based on the user specific language.</description>
    <formula>CASE($User.cgcloud__Language_Postfix__c,
&quot;Language1&quot;, cgcloud__Category_Labels_Language_1__c,
&quot;Language2&quot;, cgcloud__Category_Labels_Language_2__c,
&quot;Language3&quot;, cgcloud__Category_Labels_Language_3__c,
&quot;Language4&quot;,cgcloud__Category_Labels_Language_4__c,
cgcloud__Category_Labels_Language_1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Labels</label>
    <type>Text</type>
</CustomField>