force-app/main/default/objects/cgcloud__Account_Plan__c/fields/cgcloud__Category_Labels_Language_3__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Category_Labels_Language_3__c</fullName>
    <description>Holds the category labels in short descriptions of language 3 for all categories associated to plan.</description>
    <label>Category Labels Language 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>