force-app/main/default/objects/cgcloud__Account_Plan__c/fields/cgcloud__KPI_Set__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KPI_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the KPI Set</description>
    <label>KPI Set</label>
    <referenceTo>cgcloud__KPI_Set__c</referenceTo>
    <relationshipLabel>Customer Business Plans</relationshipLabel>
    <relationshipName>Customer_Business_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>