force-app/main/default/objects/cgcloud__Account_Plan__c/fields/cgcloud__Note__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Note__c</fullName>
    <description>Comments to track the changes made in customer business plan record.</description>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>