force-app/main/default/objects/cgcloud__Account_Plan__c/fields/cgcloud__Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Org__c</fullName>
    <formula>TEXT (cgcloud__Account__r.cgcloud__Account_Template__r.cgcloud__Sales_Org__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Org</label>
    <type>Text</type>
</CustomField>