force-app/main/default/objects/cgcloud__Account_Plan__c/fields/cgcloud__Version_Synced_Off_Platform__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Version_Synced_Off_Platform__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Version received by the Off Platform operations.</description>
    <label>Version Synced Off Platform</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>