force-app/main/default/objects/cgcloud__Account_Plan__c/validationRules/cgcloud__Account_ReadOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Account_ReadOnly</fullName>
    <active>true</active>
    <description>Account cannot be changed</description>
    <errorConditionFormula>ISCHANGED( cgcloud__Account__c )</errorConditionFormula>
    <errorDisplayField>cgcloud__Account__c</errorDisplayField>
    <errorMessage>Account cannot be changed</errorMessage>
</ValidationRule>