force-app/main/default/objects/cgcloud__Account_Plan__c/validationRules/cgcloud__Business_Year_ReadOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Business_Year_ReadOnly</fullName>
    <active>true</active>
    <description>Business Year cannot be changed</description>
    <errorConditionFormula>ISCHANGED( cgcloud__Business_Year__c )</errorConditionFormula>
    <errorDisplayField>cgcloud__Business_Year__c</errorDisplayField>
    <errorMessage>Business Year cannot be changed</errorMessage>
</ValidationRule>