force-app/main/default/objects/cgcloud__Account_Plan__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Description__c</columns>
    <columns>cgcloud__Account__c</columns>
    <columns>cgcloud__Business_Year_Label__c</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <columns>cgcloud__Category_Labels__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>